<resources>
    <string name="app_name">Java to Kotlin</string>
    <string name="hello_kotlin"><b>Hello Kotlin</b></string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="type_your_name_and_surname">please, type your name and surname</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="text">Text</string>
    <string name="tab_one">Tab One</string>
    <string name="tab_two">Tab Two</string>
    <string name="tab_three">Tab Three</string>
    <string name="open_new_activity">Open new Activity</string>
    <string name="title">Title</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="intent">Intent</string>
    <string name="context_menu">Context menu</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>
