<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/buttonLeftP002"
    android:text="@string/left"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/buttonRightP002"
    android:text="@string/right"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/buttonUpP002"
    android:text="@string/up"/>
    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/buttonDownP002"
    android:text="@string/down"/>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
                    android:id="@+id/relativeLayoutP002">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/textViewP002"
        android:text="@string/hello_kotlin"
        android:layout_centerInParent="true"/>
    </RelativeLayout>

</LinearLayout>